playground/notas_tests/invalid/syn-let-type-no-name.hulk
let msg: = "hola" in msg;
